k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tiny-bitly
  labels:
    name: tiny-bitly
